<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recycling.MyRecyclingFragment">


    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Items"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tasksText"
        android:layout_marginTop="100dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasksText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRecycled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:backgroundTint="@color/red_light"
        android:enabled="true"
        android:src="@drawable/baseline_check_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreMyRecycling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0g"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/logoMyRecycling"
        app:layout_constraintStart_toStartOf="@id/logoMyRecycling"
        app:layout_constraintTop_toBottomOf="@id/logoMyRecycling" />

    <ImageView
        android:id="@+id/logoMyRecycling"
        android:layout_width="59dp"
        android:layout_height="70dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_margin="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>