...
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="65dp"
        android:text="next"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:textSize="12sp"
        android:contentDescription="key in item number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_quantity" />

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="200dp"
        android:layout_height="52dp"
        android:layout_marginStart="44dp"
        android:contentDescription="dropdown menu for item selection"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_type" />

    <TextView
        android:id="@+id/item_quantity"
...
