...
        android:fontFamily="@font/orange"
        android:text="scan recyclables"
        android:textAlignment="center"
        android:textColor="#271A06"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butCamera" />

    <ImageView
        android:id="@+id/butCamera"
        android:layout_width="105dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="scanner for recyclables"
        android:src="@drawable/baseline_camera_alt_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/butForest"
...
